@@ -1,5 +1,5 @@
 /**
- * $Id: backend_sfcb.c,v 1.11 2006/11/07 15:00:20 sschuetz Exp $
+ * $Id: backend_sfcb.c,v 1.12 2006/12/15 15:46:00 sschuetz Exp $
  *
  * (C) Copyright IBM Corp. 2004
  * 
@@ -388,14 +388,19 @@ int sfcb_add_instance(class_entry * ie, const char * ns)
 	void * blob;
 	int len, size;
 	CMPIData data;
-	class_entry * ce; //class definition for ie
+	class_entry * ce=NULL; //class definition for ie
 	CMPIObjectPath * path;
 	ClInstance * inst;
 	CMPIInstance* cmpi_instance = malloc(sizeof(CMPIInstance));
 	prop_chain * class_prop;
 	prop_chain * inst_props = ie -> class_props;
 	
+	
 	ce = get_class_def_for_instance(ie);
+	if(!ce) {
+		//class def not found
+		exit(0);
+	}
 
 	path = mofc_getObjectPath(ce, ie, ns);
 	inst = ClInstanceNew(ns, ie->class_id);
