@@ -1,3 +1,8 @@
+2006-12-15  Sven Schuetz
+
+	* backend_sfcb.c, symtab.c:
+	Fixed 1614898: coredumps for instance of undefined class
+
 2006-11-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* configure.ac: 
